# ArenaX

./: .gitignore  BUILD_STATUS.md  DEVELOPMENT.md  MATCH_AUTHORITY_IMPLEMENTATION.md  Makefile  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .env  .gitignore  Cargo.toml  README.md  env.example
backend/.cargo/: config.toml
backend/migrations/: 20240930000001_create_match_authority.down.sql  20240930000001_create_match_authority.up.sql  20250130000001_governance_tables.down.sql  20250130000001_governance_tables.up.sql
backend/src/: api_error.rs  config.rs  db.rs  lib.rs  main.rs  middleware.rs  telemetry.rs
backend/src/auth/: device_service.rs  jwt_service.rs  jwt_service_test.rs  middleware.rs  mod.rs
backend/src/http/: auth_handler.rs  health.rs  match_authority_handler.rs  match_ws_handler.rs  mod.rs
backend/src/models/: match_authority.rs  match_model.rs  mod.rs  reward_settlement.rs  tournament.rs  wallet.rs
backend/src/service/: auth_service.rs  auth_service_updated.rs  governance_service.rs  match_authority_service.rs  match_authority_service_test.rs  mod.rs  reward_settlement_service.rs  soroban_service.rs
contracts/: .gitignore  Cargo.toml  README.md  env.example
contracts/example/: Cargo.toml
contracts/example/src/: lib.rs  test.rs
contracts/example/test_snapshots/test/: test_initialize.1.json
contracts/governance_multisig/: Cargo.toml
contracts/governance_multisig/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/protocol-params/: Cargo.toml
contracts/protocol-params/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/protocol-params/test_snapshots/test/: test_set_and_get_param.1.json  test_versioning.1.json
contracts/reputation_aggregation/: Cargo.toml
contracts/reputation_aggregation/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/slashing_contract/: Cargo.toml  README.md
contracts/slashing_contract/src/: lib.rs  test.rs
contracts/tournament_finalizer/: Cargo.toml
contracts/tournament_finalizer/src/: lib.rs  test.rs
contracts/tournament_finalizer/test_snapshots/test/: test_prevent_re_finalization.1.json  test_prevent_re_initialization.1.json  test_tournament_finalization_success.1.json
frontend/: .gitignore  README.md  env.example  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/wallet/: page.tsx
frontend/src/components/: ThemeToggle.tsx
frontend/src/components/common/: Logo.tsx
frontend/src/components/layout/: AppLayout.tsx  MobileNav.tsx  Navbar.tsx
frontend/src/components/ui/: ThemeToggle.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: routes.ts
server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.ts
server/src/controllers/: auth.controller.ts
server/src/middleware/: error.middleware.ts
server/src/routes/: index.ts
server/src/services/: blockchain.service.ts  contract.service.ts  event-monitoring.service.ts  governance.service.ts  match.service.ts  reward.service.ts  tournament.service.ts  wallet.service.ts
