[package]
name = "arenax-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
rust_decimal = "1.40.0"
actix-web = "4.12.1"
jsonwebtoken = "9.2"
bcrypt = "0.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
validator = { version = "0.20.0", features = ["derive"] }
rust_decimal = "1.40.0"
actix-web = "4.12.1"
actix = "0.13"
actix-web-actors = "4.3"
anyhow = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
sha2 = "0.10"
dotenvy = "0.15"
actix-cors = "0.6"
jsonwebtoken = "9.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
