[workspace]
members = [
    "example",
    "user_identity_contract",
    "reputation_aggregation",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "23.0.2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ArenaX Team <dev@arenax.gg>"]
license = "MIT"
repository = "https://github.com/arenax/arenax"
description = "ArenaX Stellar Smart Contracts"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1
panic = "abort"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true