[package]
name = "tournament_finalizer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ArenaX Tournament Finalizer Contract"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
